# pi3hat

./: .bazelrc  .gitignore  .travis.yml  BUILD  CHANGELOG.md  CMakeLists.txt  README.md  RELEASING.md  TODO  WORKSPACE  build_moteus_control_example.sh  debug.gdb  eeprom_settings.txt  flash.py  flash.sh  make_release.py  run_openocd.sh  run_openocd_noreset.sh  travis-ci.sh
.github/workflows/: build-release.yml  ci.yml  publish-python-pypi.yml  release.yml
3dprint/pi3hat_20200422/: rf_clamp.3mf  rf_clamp.stl  rf_support.stl
3dprint/pi3hat_20200423/: rf_support.3mf  rf_support.stl  rf_support_and_clamp.3mf
3dprint/pi3hat_20200614/: rf_clamp.stl  rf_support.stl
docs/: reference.md
fw/: BUILD  attitude_reference.h  bmi088.cc  bmi088.h  can_bridge.h  cpu_meter.h  device_info.h  euler.h  fdcan.cc  fdcan.h  fifo.h  git_info.cc  git_info.h  git_info_linkstamp.cc  icm42688.cc  icm42688.h  imu.cc  imu.h  imu_data.h  math_util.h  microphone.h  millisecond_timer.h  nrf24l01.cc  nrf24l01.h  pi3_hat.cc  point3d.h  quaternion.h  register_spi_slave.cc  register_spi_slave.h  rf_transceiver.h  slot_rf_protocol.cc  slot_rf_protocol.h  stm32_pwm_out.h  stm32_serial.cc  stm32_serial.h  ukf_filter.h
hw/: .gitignore  ICM-42688-P.lbr  SPW2430HR5H-B.lbr  SRR1260-100M.lbr  pi3_hat.brd  pi3_hat.lbr  pi3_hat.sch
hw/4.4b/: pi3_hat.brd
hw/r4.1/: pi3_hat.brd  pi3_hat.lbr  pi3hat_r4_1.step
hw/r4.2/: pi3_hat.brd  pi3_hat.sch
hw/r4.3/: pi3_hat.brd
hw/r4.4/: pi3_hat.brd
hw/r4.4b/: pi3_hat.sch
hw/r4.5/: pi3_hat.brd  pi3_hat.lbr  pi3_hat.sch
lib/cpp/examples/: BUILD  Makefile  README.md  imu_transport.cc  pi3hat_moteus_transport_register.cc
lib/python/: BUILD  README.md  setup.py  setup.py.TPL
lib/python/examples/: imu_example.py  pi3hat_stress.py  raw_can_example.py
lib/python/moteus/: BUILD  __init__.py  _pi3hat_router.cc  pi3hat_router.py
lib/python/moteus_pi3hat/: BUILD  __init__.py  _pi3hat_device.cc  _pi3hat_router.cc  pi3hat_device.py  (+1 more)
mjbots/moteus/: BUILD  moteus_control_example.cc  moteus_protocol.h  moteus_tool_main.cc  pi3hat_moteus_interface.h
mjbots/pi3hat/: BUILD  pi3hat.cc  pi3hat.h  pi3hat_tool.cc
tools/workspace/: default.bzl
utils/: release.py
(+27 files in other folders)
